# football-manager

./: .gitignore  CLAUDE.md  Makefile  README.md  RUNNING_API_GO_LOCALLY.md  TESTING_GO_API_LOCALLY.md  docker-compose.go-dev.yml  docker-compose.yml
football-api/: .coveragerc  .env.example  .env.monitoring.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.hml.yml  docker-compose.monitoring.prod.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  traefik-dynamic.yml
football-api/app/: main.py
football-api/app/api/: deps.py
football-api/app/api/v1/: __init__.py  router.py
football-api/app/api/v1/routers/: admin.py  auth.py  beta.py  chat.py  finance.py  groups.py  invites.py  matches.py  mcp_tokens.py  players.py  push.py  ranking.py  reviews.py  subscriptions.py  teams.py  votes.py  webhooks.py
football-api/app/core/: config.py  database.py  dependencies.py  exceptions.py  job_metrics.py  security.py
football-api/app/db/: migrate.py  session.py
football-api/app/db/repositories/: base.py  finance_repo.py  group_repo.py  group_stats_repo.py  invite_repo.py  match_repo.py  match_stats_repo.py  player_repo.py  player_stats_repo.py  ranking_repo.py  refresh_token_repo.py  review_repo.py  subscription_repo.py  team_repo.py  vote_repo.py  waitlist_repo.py
football-api/app/models/: __init__.py  android_beta_signup.py  app_review.py  base.py  finance.py  group.py  invite.py  match.py  match_vote.py  mcp_token.py  player.py  push_subscription.py  refresh_token.py  subscription.py  team.py  user.py  waitlist.py
football-api/app/schemas/: admin.py  auth.py  chat.py  finance.py  group.py  group_stats.py  invite.py  match.py  mcp_token.py  player.py  player_public.py  player_stats.py  ranking.py  review.py  subscription.py  team.py  vote.py
football-api/app/services/: billing.py  billing_stripe.py  match_listing.py  push.py  recurrence.py  storage.py  team_builder.py  telegram.py  twilio_verify.py  vote_reminder.py  voting.py
football-api/app/utils/: seed.py
football-api/migrations/: 001_initial_schema.sql  002_seed_dev.sql  003_match_number.sql  004_match_address.sql  005_match_venue_fields.sql  006_match_max_players.sql  007_group_pricing.sql  008_group_pricing_v2.sql  009_player_must_change_password.sql  010_match_end_time.sql  011_group_recurrence.sql  012_remove_admin_attendances.sql  013_add_in_progress_match_status.sql  014_push_subscriptions.sql  015_player_subscriptions.sql  016_app_reviews.sql  017_match_votes.sql  018_group_voting_config.sql  019_match_voting_snapshot.sql  020_group_member_skill.sql  021_match_teams.sql  022_stripe_checkout_fields.sql  023_webhook_events.sql  024_add_billing_cycle_to_subscriptions.sql  025_admin_must_change_password.sql  026_group_finance.sql  027_public_groups_waitlist.sql  028_backfill_finance_payments.sql  029_match_number_per_group.sql  030_whatsapp_e164.sql  031_add_group_timezone.sql  032_backfill_missing_pending_attendances.sql  033_player_avatar_url.sql  035_group_member_position.sql  036_trim_player_nicknames.sql  037_android_beta_signups.sql  038_match_player_stats.sql  039_group_team_slots.sql  040_mcp_tokens.sql  041_chat_enabled.sql  (+6 more)
football-api/monitoring/grafana/provisioning/alerting/: contact-points.yml  notification-policies.yml  rules.yml
football-api/monitoring/grafana/provisioning/dashboards/: apis.json  dashboards.yml
football-api/monitoring/prometheus/: prometheus.yml
football-api/tests/: conftest.py
football-api/tests/unit/: test_dependencies.py  test_job_metrics.py  test_security.py
football-api/tests/unit/routers/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_finance.py  test_groups.py  test_invites.py  test_match_player_stats.py  test_matches.py  test_mcp_tokens.py  test_players.py  test_push.py  test_ranking.py  test_reviews.py  test_subscriptions.py  test_teams.py  test_votes.py  test_webhooks.py
football-api/tests/unit/services/: test_billing_stripe.py  test_match_listing.py  test_push.py  test_recurrence.py  test_team_builder.py  test_telegram.py  test_twilio_verify.py  test_vote_reminder.py  test_voting.py
football-e2e/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
football-e2e/pages/: api_client.py  dashboard_page.py  group_page.py  login_page.py  match_page.py
football-e2e/tests/: test_attendance.py  test_auth.py  test_groups.py  test_matches.py  test_players.py  test_stripe_webhooks.py  test_waitlist.py
football-mcp/: .gitignore  Dockerfile  Makefile  pyproject.toml
football-mcp/rachao_mcp/: __main__.py  auth.py  client.py  middleware.py  server.py
football-mcp/rachao_mcp/tools/: groups.py  matches.py  players.py  teams.py
football-mcp/tests/: conftest.py  test_auth.py  test_client.py  test_guardrails.py  test_middleware.py  test_sse_auth.py
football-mcp/tests/tools/: test_groups.py  test_matches.py  test_players.py  test_teams.py
(+330 files in other folders)
