[tool.poetry]
name = "football-api"
version = "1.0.0"
description = "API REST para gestão de grupos e partidas de futebol"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.136.0,<0.136.3"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = { version = "^2.8.0", extras = ["email"] }
pydantic-settings = "^2.4.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = "4.0.1"
python-multipart = ">=0.0.26"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pytz = "^2024.1"
nanoid = "^2.0.0"
apscheduler = "^3.10.0"
pywebpush = "^2.0.0"
stripe = "^10.0.0"
twilio = "^9.0.0"
# Constraints diretas para forçar versões SEM vulnerabilidades conhecidas em deps
# transitivas. Sem isso, o pip-audit no main.yml falha.
aiohttp = ">=3.14.0"   # transitiva (pywebpush, twilio) — CVE-2026-34993 / CVE-2026-47265
idna = ">=3.15"        # transitiva (httpx, requests) — CVE-2026-45409
pyjwt = ">=2.13.0"     # transitiva (python-jose) — PYSEC-2026-{175,177,178,179}
prometheus-fastapi-instrumentator = "^8.0.0"  # 8.x libera starlette>=1.0.0 (fix de PYSEC-2026-161)
starlette = ">=1.3.1"  # CVE-2026-54283 — bump direto até a transitiva alcançar
pillow = "^12.0.0"
anthropic = "^0.97.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
asgi-lifespan = "^2.1.0"
ruff = "^0.6.0"
black = "^24.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
