[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rachao-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
rachao-mcp = "rachao_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["rachao_mcp"]
